--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
 FLASK_APP = apps.minimalapp.app.py
 FLASK_ENV = development
+
+MAIL_SERVER = smtp.gmail.com
+MAIL_PORT = 587
+MAIL_USE_TLS = True
+MAIL_USERNAME = takumi.com530@gmail.com
+MAIL_PASSWORD = actgyvkjecreydce
+MAIL_DEFAULT_SENDER = takumi.com530@gmail.com
